// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyValueEditor > matches snapshot with empty list 1`] = `
<div>
  <div
    class="container"
  >
    <table
      class="table"
    >
      <colgroup>
        <col />
        <col />
        <col
          width="0"
        />
      </colgroup>
      <thead>
        <tr>
          <th>
            Key
          </th>
          <th>
            Value
          </th>
          <th>
            <button
              class="addButton"
            >
              Add
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="title"
            colspan="3"
          >
            No items
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`KeyValueEditor > matches snapshot with items 1`] = `
<div>
  <div
    class="container"
  >
    <table
      class="table"
    >
      <colgroup>
        <col />
        <col />
        <col
          width="0"
        />
      </colgroup>
      <thead>
        <tr>
          <th>
            Key
          </th>
          <th>
            Value
          </th>
          <th>
            <button
              class="addButton"
            >
              Add
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <input
              class="input"
              id="«rd»-1-key"
              value="Content-Type"
            />
          </td>
          <td>
            <input
              class="input"
              id="«rd»-1-value"
              value="application/json"
            />
          </td>
          <td>
            <button>
              Delete
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              class="input"
              id="«rd»-2-key"
              value="Authorization"
            />
          </td>
          <td>
            <input
              class="input"
              id="«rd»-2-value"
              value="Bearer token"
            />
          </td>
          <td>
            <button>
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
